--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "final_project_341",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "start-dev": "nodemon node serv.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^2.0.20",
     "swagger-autogen": "^2.23.1"
   },
   "dependencies": {
